Better backend and library
- Add modular request logic
- Update format detection strategy to PIL
- Add fallback format for read only format (PSD, etc)
- Fix bug on L image mode which does not have 3rd axis
- Add image conversion strategy
- Add option for changing preserve alpha
- Add option for changing iteration
- Update compression ratio formula
- Add README for setup and usage in backend or library
